recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: reassignment to val
recule(steps=1)
            ^